49) kernel: net: tcp: tso: remove tp->tso_deferred.<br>
50) kernel: net: tcp: tso: allow CA_CWR state in tcp_tso_should_defer().<br>
51) kernel: net: ipv6: addrconf: validate new MTU before applying it.<br>
52) kernel: net: allow enable/disable XPS/RPS configure.<br>
53) kernel: net: neigh: don't require dst in neigh_hh_init.<br>
54) kernel: net: neigh: don't require a dst in neigh_resolve_output.<br>
55) kernel: net: udp: only allow UFO for packets from SOCK_DGRAM sockets.<br>
56) kernel: netfilter: FCONE/RCONE optimization (do not compare ifname), allow eth3.x as WAN/MAN.<br>
57) kernel: make READ_ONCE() valid on const arguments.<br>
<br>
<br>
<b>2.6.x</b><br>
1) miniupnpd: up to 1.9.20150307 version.<br>
2) quagga: up to 0.99.24.1 version.<br>
3) init.d: ipv6: fix IPOE v6 mode with tunneled WAN for v4.<br>
4) init.d: irqbalance: tune modes and enable auto by defaults.<br>
5) kernel: fastpaths: add disable nat fastpath option, small optimize.<br>
6) kernel: inet: sanitize inet{,6} protocol demux.<br>
7) kernel: net: ipv6: make unsolicited report intervals configurable for mld.<br>
8) kernel: net: ipv6: mld: fix v1/v2 switchback timeout to rfc3810, 9.12.<br>
9) kernel: net: ipv4: disallow non-namespace aware protocols to register only if namespaces enabled.<br>.
10) kerne: net: ipv4: raise tcp PMTU probe mss base size.<br>
11) kernel: net: ipv4: ip_check_defrag should not assume that skb_network_offset is zero.<br>
12) kernel: net: make skb->skb_iif always track skb->dev.<br>
13) kernel: net: remove protocol from struct dst_ops.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add dsvfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>